--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&display=swap"
     rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mathwhiz.biz</title>
+  <title>MathWhiz.biz</title>
 </head>
 
 <body>
